syntax = "proto3";

package agi.alpha.bridge.v1;

message PlanRequest {
  string utterance = 1;
  string history_json = 2;
  string trace_id = 3;
  bool require_consent = 4;
  string consent_token = 5;
  map<string, string> metadata = 6;
}

message PlanResponse {
  string plan_json = 1;
  string trace_id = 2;
  bool requires_consent = 3;
  string consent_token = 4;
}

message ExecuteRequest {
  string plan_json = 1;
  string trace_id = 2;
  bool consent_granted = 3;
  string consent_token = 4;
  map<string, string> metadata = 5;
}

message ExecuteResponse {
  string receipt_json = 1;
  string trace_id = 2;
}

service AlphaBridge {
  rpc Plan(PlanRequest) returns (PlanResponse);
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}
